fix: main content column gap

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -49,7 +49,7 @@ main {
     flex-direction: column;
     justify-content: start;
     justify-items: center;
-    column-gap: 10rem;
+    gap: 1.5rem;
     margin-top: 6rem;
     margin-bottom: 5rem;
 
